@@ -1,0 +1,39 @@
+<?php
+
+return 'class '.$data['ctrl_name'].'Controller extends Peak_Controller
+{
+
+	/**
+     * Action before controller handle action
+     */
+	public function preAction()
+	{
+	
+	}
+
+	/**
+     * Action after controller handle action
+     */
+	public function postAction()
+	{
+
+	}
+
+	/**
+     * Action after view rendering
+     */
+	public function postRender()
+	{
+
+	}
+
+	/**
+     * Default Action
+     */
+	public function _index()
+	{
+
+
+	}
+
+}';
