@@ -1,5 +1,7 @@
 #VERSION 0.7.8# 
 
+*  added Peak_core_Codegen class > generate application code files
+
 *  Peak_core > Introduce core extensions objects primarily to move methods not used inside the application running process 
                and by the way, ligthen Peak_Core file. Removed/moved methods getLang(), getConfigs(), checkConfigs() 
                into extension , and added method ext() to access to them. Extensions objects are stored in $extensions var.
